source location correction in index.html

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="stylesheet" href="google.css"> 
-    <link rel="shortcut icon" href="/favicon.png" >
+    <link rel="shortcut icon" href="./src/favicon.png" >
 </head>
 <body>
     <nav>
         <a href="#kira">Gmail</a>
         <a href="https://www.google.co.in/imghp?hl=en&ogbl" >Images</a>
-        <a href="#"><img src="/appicon.PNG" alt="Apps" width="1.5%" style="margin-bottom: -15px; padding: 10px;"></a>
+        <a href="#"><img src="./src/appicon.PNG" alt="Apps" width="1.5%" style="margin-bottom: -15px; padding: 10px;"></a>
         <a id="sign" href="#">Sign In</a>
         
     </nav>
     
     <div class="a">
-        <div id="kira" class="b"><img src="/googlelogo.png" width="100%" alt="Google"></div>
+        <div id="kira" class="b"><img src="./src/googlelogo.png" width="100%" alt="Google"></div>
         <div class="c"><input type="text" id="searchbox" placeholder="  Search"></div>
         <div id="search">
             <a class="anc" href="#" >Google Search</a>
